# haxeditor

./: .travis.yml  CMakeLists.txt  README.md
cmake/: CodeCoverage.cmake  GoogleTestProjects.cmake
dal/: CMakeLists.txt  ChangeApplicator.cpp  ChangeApplicator.h  ChangeStack.cpp  ChangeStack.h  DalTypes.h  DataAbstractionLayer.cpp  DataAbstractionLayer.h  DataChange.h  DataStream.h  DataTransform.h  FileDataStream.cpp  MockPatternDataStream.cpp  NullDataStream.cpp
dal/tests/: CMakeLists.txt  change_applicator.cpp  change_stack.cpp  mem_da.cpp
fal/: CMakeLists.txt  FAL.cpp  FAL.h
haxeditor/: CMakeLists.txt  DataCellRenderer.cpp  DataRenderer.h  HaxDocument.h  HaxDocumentMultiFrame.cpp  HaxDocumentMultiFrame.h  HaxDocumentView.h  HaxEditor.h  HaxFrame.cpp  HaxFrame.h  HaxOffsetRenderer.h  HaxPagedDocumentView.cpp  HaxPagedDocumentView.h  HaxTextCellFrame.cpp  HaxTextCellFrame.h  PagedView.h  SelectionDriver.cpp  SelectionDriver.h  SelectionRenderer.h  StringCellRenderer.cpp  StringCellRenderer.h  haxeditor.cpp  haxeditor.h
haxeditor/inspection/: DataInspector.cpp  DataInspector.h  DataInterpreter.h
haxeditor/panels/: DataInspectorPanel.cpp  DataInspectorPanel.h  DataPanel.h
haxeditor/tests/: CMakeLists.txt  hax_document_multiframe.cpp  hax_offset_renderer.cpp  hax_string_renderer.cpp  paged_view.cpp  selection_driver.cpp  selection_renderer.cpp
haxeditor/tests/inspection/: integer_inspection.cpp  string_interp.cpp
haxeditor/utils/: CompilerSupport.h
hxe-curses/: CMakeLists.txt  hxe_curses.cpp
hxe-wx/: CMakeLists.txt  HexMultiFrame.cpp  HexMultiFrame.h  HexTextFrame.cpp  HexTextFrame.h  HugeScrollBar.cpp  HugeScrollBar.h  hexframe.cpp  hexframe.h  hxe-wx.cpp
hxe-wx/panels/: HwxDataInspectorPanel.cpp  HwxDataInspectorPanel.h
scripts/: coverity-model.c
tests/: CMakeLists.txt  haxtest.cpp
utils/: CMakeLists.txt  MathsUtils.cpp  MathsUtils.h
utils/tests/: CMakeLists.txt  rounding.cpp
